--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -11,7 +11,7 @@
         <input type="password" class="form-control" ng-model="password">
     </div>
 
-    <input type="submit" id="submit" value="Submit" />
+    <input type="submit" class="btn btn-primary" id="submit" value="Submit" />
 </form>
 
 <hr>
