Placeholders for home and show page

--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,7 +1,78 @@
 <div class="row" >
-    <div class="column">
+    <div class="col-md-3">
 
-        Home Page
+        <ul class="list-group">
+            <li class="list-group-item text-center"><b>Categories</b></li>
+            <li class="list-group-item">Action</li>
+            <li class="list-group-item">Adventure</li>
+            <li class="list-group-item">Chick Flick</li>
+            <li class="list-group-item">Drama</li>
+            <li class="list-group-item">Musical</li>
+            <li class="list-group-item">Mystery</li>
+            <li class="list-group-item">Thriller</li>
+            <li class="list-group-item">...</li>
+        </ul>
+
 
     </div>
+
+    <div class="col-md-8 col-sm-12">
+
+        <div class="row">
+
+            <!--Repeat this for each image-->
+            <div class="block-grid-xs-2 block-grid-sm-3">
+                <div class="block-grid-item">
+                    <div class="thumbnail">
+                        <img src="./data/images/game_of_thrones.jpg">
+                        <div class="caption">
+                            <a href="#/show"><h3>Game Of Thrones</h3></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="block-grid-item">
+                    <div class="thumbnail">
+                        <img src="./data/images/house.jpg">
+                        <div class="caption">
+                            <h3>House</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="block-grid-item">
+                    <div class="thumbnail">
+                        <img src="./data/images/friends.jpg">
+                        <div class="caption">
+                            <a href="#/show"><h3>Friends</h3></a>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="block-grid-item">
+                    <div class="thumbnail">
+                        <img src="./data/images/qi.jpg">
+                        <div class="caption">
+                            <h3>Qi</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="block-grid-item">
+                    <div class="thumbnail">
+                        <img src="./data/images/community.jpg">
+                        <div class="caption">
+                            <h3>Community</h3>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
+
+    </div>
+
 </div>
