--- a/public/partials/show.html
+++ b/public/partials/show.html
@@ -14,7 +14,9 @@
         <hr>
         <b>Network: </b> <span ng-repeat="network in show.networks">{{network}}</span>
         <hr>
-        <div class="btn btn-success"><span class="glyphicon glyphicon-plus"></span> Add To Favorites</div>
+
+        <div class="btn btn-success" ng-show="!isInFavorites" ng-click="addToFavorites()"><span class="glyphicon glyphicon-plus"></span> Add To Favorites</div>
+        <div class="btn btn-danger" ng-show="isInFavorites" ng-click="removeFromFavorites()"><span class="glyphicon glyphicon-warning-sign"></span> Remove From Favorites</div>
     </div>
 </div>
 
