--- a/public/partials/login.html
+++ b/public/partials/login.html
@@ -1,20 +1,29 @@
-<h1><span class="fa fa-sign-in"></span> Login</h1>
-
 <!-- LOGIN FORM -->
-<form ng-submit="login()">
-    <div class="form-group">
-        <label>Email</label>
-        <input type="text" class="form-control" name="email" ng-model="email">
+<div class="row">
+    <div class="col-sm-10 col-sm-offset-1 col-lg-6 col-lg-offset-3">
+        <h1>Login</h1>
+        <div class="panel panel-default">
+            <div class="panel-body">
+
+                <form ng-submit="login()">
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input type="text" class="form-control" name="email" ng-model="email">
+                    </div>
+                    <div class="form-group">
+                        <label>Password</label>
+                        <input type="password" class="form-control" name="password" ng-model="password">
+                    </div>
+
+                    <input class="btn btn-primary" type="submit" id="submit" value="Submit" />
+                </form>
+
+                <hr>
+                <p>Need an account? <a href="#/signup">Sign Up</a></p>
+                <p>Or go <a href="#/">Home</a></p>
+
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label>Password</label>
-        <input type="password" class="form-control" name="password" ng-model="password">
-    </div>
+</div>
 
-    <input class="btn btn-primary" type="submit" id="submit" value="Submit" />
-</form>
-
-<hr>
-
-<p>Need an account? <a href="#/signup">Signup</a></p>
-<p>Or go <a href="#/">home</a>.</p>
