--- a/public/partials/signup.html
+++ b/public/partials/signup.html
@@ -1,20 +1,30 @@
-<h1>Signup</h1>
-
 <!-- SIGNUP FORM -->
-<form ng-submit="signup()">
-    <div class="form-group">
-        <label>Email</label>
-        <input type="text" class="form-control" ng-model="email">
+<div class="row">
+    <div class="col-sm-10 col-sm-offset-1 col-lg-6 col-lg-offset-3">
+        <h1>Signup</h1>
+        <div class="panel panel-default">
+            <div class="panel-body">
+
+            <form ng-submit="signup()">
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="text" class="form-control" ng-model="email">
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" class="form-control" ng-model="password">
+                </div>
+
+                <input type="submit" class="btn btn-primary" id="submit" value="Submit" />
+            </form>
+
+            <hr>
+
+            <p>Already have an account? <a href="#/login">Login</a></p>
+            <p>Or go <a href="#/">Home</a></p>
+
+            </div>
+        </div>
     </div>
-    <div class="form-group">
-        <label>Password</label>
-        <input type="password" class="form-control" ng-model="password">
-    </div>
+</div>
 
-    <input type="submit" class="btn btn-primary" id="submit" value="Submit" />
-</form>
-
-<hr>
-
-<p>Already have an account? <a href="#/login">Login</a>.</p>
-<p>Or go <a href="#/">Home</a>.</p>
