--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,3 +1,15 @@
+<div class="row home-header-image">
+    <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
+        <h1>Cool. <br>Cool cool cool.</h1>
+        <h2>Fandom brings together fans of your favorite TV shows</h2>
+        <h3>Ask questions, discuss theories, and make jokes</h3>
+        <a href="/#/show/18347" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-arrow-right"></span> Discuss Community Now</a>
+    </div>
+</div>
+
+<div class="row">
+<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+
 <div class="row" >
     <div class="col-md-2">
 
@@ -55,4 +67,7 @@
         </div>
     </div>
 
+</div>
+
+</div>
 </div>
