--- a/public/partials/home.html
+++ b/public/partials/home.html
@@ -1,9 +1,9 @@
-<div class="row home-header-image">
+<div id="home-header-image" class="row home-header-image">
     <div class="col-xs-12 col-md-10 col-md-offset-1 col-lg-8 col-lg-offset-2">
-        <h1>Cool. <br>Cool cool cool.</h1>
-        <h2>Fandom brings together fans of your favorite TV shows</h2>
-        <h3>Ask questions, discuss theories, and make jokes</h3>
-        <a href="/#/show/18347" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-arrow-right"></span> Discuss Community Now</a>
+        <h1 id="home-header-text-level-1">Cool. <br>Cool cool cool.</h1>
+        <h2 id="home-header-text-level-2">Fandom brings together fans of your favorite TV shows</h2>
+        <h3 id="home-header-text-level-3">Tell jokes, ask questions, and discuss theories</h3>
+        <a href="/#/show/18347" class="btn btn-primary btn-lg" id="header-button-text"></a>
     </div>
 </div>
 
