--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -26,28 +26,28 @@ h1 {
 }
 
 .home-header-image {
-    background-image: url("../data/homeImages/Community-2014-TV-Series-Poster-Wallpaper.jpg");
+    @include transition(.7s);
 
     background-size: cover;
     background-repeat: no-repeat;
-//    background-position: left top;
     background-attachment: fixed;
     padding: 25px;
     color: #ffffff;
-  background-position: center;
+    background-position: center;
+
+  h1 {
+    font-size: 8vmax;
+    color: #ffffff;
+    font-weight: 700;
+    text-shadow: 1px 1px rgba(30, 30, 30, .3);
+  }
+
+  h2 {
+    text-shadow: 2px 2px rgba(30, 30, 30, .3);
+  }
+  h3 {
+    text-shadow: 2px 2px rgba(30, 30, 30, .3);
+  }
 
 }
 
-.home-header-image h1 {
-  font-size: 8vmax;
-  color: #ffffff;
-  font-weight: 700;
-
-}
-
-.classroom-explanation {
-  padding: 20px;
-  font-size: 1.5em;
-  text-align: center;
-  font-weight: 700;
-}
