Fixing header button and row spacing for episdoes and shows

--- a/public/partials/episode.html
+++ b/public/partials/episode.html
@@ -1,4 +1,7 @@
 <div class="row">
+<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+
+<div class="row">
     <div class="col-sm-4">
         <img class="show-image" ng-show="!episode.img_filename" ng-src="{{episode.img_url}}"> <!-- Show the show image only if it has been loaded, otherwise display the episode image -->
         <img class="show-image" ng-show="episode.img_filename" src="./data/images/{{episode.img_filename}}">
@@ -52,4 +55,6 @@
 
 
     </div>
+</div>
+</div>
 </div>
