--- a/public/partials/show.html
+++ b/public/partials/show.html
@@ -1,4 +1,7 @@
 <div class="row">
+<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+
+<div class="row">
     <div class="col-sm-3">
         <img class="show-image" src="./data/images/{{show.img_filename}}">
     </div>
@@ -43,4 +46,6 @@
         </div>
 
     </div>
+</div>
+</div>
 </div>
