--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -104,3 +104,16 @@ h1 {
   /* line 48, ../../sass/_base.scss */
   .home-header-image h3 {
     text-shadow: 2px 2px rgba(30, 30, 30, 0.3); }
+
+/* line 53, ../../sass/_base.scss */
+.show-header {
+  background-color: #eee;
+  padding: 15px 0px;
+  margin-top: 10px;
+  margin-bottom: 15px; }
+  /* line 59, ../../sass/_base.scss */
+  .show-header h1 {
+    margin-top: 0px; }
+  /* line 63, ../../sass/_base.scss */
+  .show-header hr {
+    border-color: #DBDBDB; }
