--- a/public/partials/show.html
+++ b/public/partials/show.html
@@ -1,11 +1,10 @@
-<div class="row">
-<div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+<div class="row show-header">
 
-<div class="row">
-    <div class="col-sm-3">
+    <div class="col-lg-2 col-lg-offset-2 col-md-4 col-md-offset-1 col-sm-4 col-xs-12">
         <img class="show-image" src="./data/images/{{show.img_filename}}">
     </div>
-    <div class="col-sm-9">
+
+    <div class="col-lg-6 col-md-6 col-sm-8 col-xs-12">
 
         <h1>{{show.name}}</h1>
         {{show.summary}}
@@ -23,15 +22,15 @@
         <hr>
         <b>IMDB Rating: </b> <span>{{show.imdb_rating}}</span>
 
-
+        <hr>
+        <a class="btn btn-default" ng-show="!profile" href="#/login">Login To Favorite</a>
         <div class="btn btn-success" ng-show="profile && !isInFavorites" ng-click="addToFavorites()"><span class="glyphicon glyphicon-plus"></span> Add To Favorites</div>
-        <div class="btn btn-danger" ng-show="profile && isInFavorites" ng-click="removeFromFavorites()"><span class="glyphicon glyphicon-warning-sign"></span> Remove From Favorites</div>
+        <div class="btn btn-danger" ng-show="profile && isInFavorites" ng-click="removeFromFavorites()"><span class="glyphicon glyphicon-trash"></span> Remove From Favorites</div>
     </div>
 </div>
 
-
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
 
         <div ng-repeat="aSeason in allSeasons">
 
