--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -48,6 +48,19 @@ h1 {
   h3 {
     text-shadow: 2px 2px rgba(30, 30, 30, .3);
   }
-
 }
 
+.show-header {
+  background-color: #eee;
+  padding: 15px 0px;
+  margin-top: 10px;
+  margin-bottom: 15px;
+
+  h1{
+    margin-top: 0px;
+  }
+
+  hr {
+    border-color: #DBDBDB;
+  }
+}
