--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -64,3 +64,23 @@ h1 {
     border-color: #DBDBDB;
   }
 }
+
+.episode-textarea {
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
+
+.comment-parent {
+  background-color: rgba(232, 232, 232, 0.30);
+  padding: 10px 10px;
+  margin-top: 15px;
+}
+
+.comment-child {
+  margin-top: 10px;
+  margin-left: 50px;
+  margin-right: 50px;
+
+  padding: 10px 10px;
+  background-color: rgba(200, 200, 200, .3);
+}
