--- a/public/partials/profile.html
+++ b/public/partials/profile.html
@@ -1,3 +1,6 @@
+<div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
+
 <h1 ng-show="userProfile">Profile</h1>
 <a ng-click="logout()" class="button small" ng-show="profile">Logout</a>
 
@@ -8,19 +11,48 @@
     <div role="tabpanel">
         <!-- Nav tabs -->
         <ul class="nav nav-tabs" role="tablist">
-            <li role="presentation" class="active"><a href="#/profile/{{userProfile._id}}" aria-controls="home" role="tab" data-toggle="tab">Profile</a></li>
-            <li role="presentation"><a href="#/profile_comments/{{userProfile._id}}" aria-controls="messages" role="tab" data-toggle="tab">Comments</a></li>
-            <li role="presentation"><a href="#/profile_favorites/{{userProfile._id}}" aria-controls="settings" role="tab" data-toggle="tab">Favorites</a></li>
+            <li role="presentation" class="active"><a href="#/profile/{{selectedUserId}}">Profile</a></li>
+            <li role="presentation"><a href="#/profile_comments/{{selectedUserId}}">Comments</a></li>
+            <li role="presentation"><a href="#/profile_favorites/{{selectedUserId}}">Favorites</a></li>
         </ul>
 
         <!-- Tab panes -->
         <div class="tab-content">
+            <h3>{{userProfile.local.email}}</h3>
             <p>
-                <strong>id</strong>: {{userProfile._id}}<br>
-                <strong>email</strong>: {{userProfile.local.email}}<br>
-                <strong>password</strong>: {{userProfile.local.password}}
+                <strong>Pops</strong>: {{numberUpvotes}}<br>
             </p>
-        </div>
 
+            <button ng-if="isMyProfile" class="btn btn-default" type="button" data-toggle="collapse" data-target="#changePassword" aria-expanded="false" aria-controls="changePassword">
+                Change Password
+            </button>
+            <div class="collapse row" id="changePassword">
+                <div class="col-md-4">
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                        <form name="changePasswordForm" novalidate ng-submit="changePassword()">
+                            <div class="form-group">
+                                <label>New Password</label>
+                                <input type="password" name="newPassword" id="newPassword" class="form-control" ng-model="newPassword" required />
+                            </div>
+                            <div class="form-group">
+                                <label>Confirm Password</label>
+                                <input type="password" name="confirmPassword" id="confirmPassword" class="form-control"
+                                       ng-model="confirmPassword"
+                                       ng-required pw-check="newPassword" />
+                                <div ng-messages="Passwords don't match"></div>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary">Change Password</button>
+                            </div>
+                        </form>
+                    </div>
+            </div>
+                </div>
+        </div>
+            </div>
+        </div>
     </div>
 </div>
+        </div>
+    </div>
