--- a/public/partials/profile_comments.html
+++ b/public/partials/profile_comments.html
@@ -1,3 +1,5 @@
+<div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
 <h1>Comments</h1>
 
 <!-- PROFILE INFORMATION -->
@@ -6,14 +8,9 @@
         <div role="tabpanel">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation"><a href="#/profile/{{selectedUserId}}" aria-controls="home"
-                                           role="tab" data-toggle="tab">Profile</a></li>
-                <li role="presentation" class="active"><a ng-href="#/profile_comments/{{selectedUserId}}"
-                                                          aria-controls="messages" role="tab"
-                                                          data-toggle="tab">Comments</a>
-                </li>
-                <li role="presentation"><a ng-href="#/profile_favorites/{{selectedUserId}}" aria-controls="settings"
-                                           role="tab" data-toggle="tab">Favorites</a></li>
+                <li role="presentation"><a href="#/profile/{{selectedUserId}}">Profile</a></li>
+                <li role="presentation" class="active"><a href="#/profile_comments/{{selectedUserId}}">Comments</a></li>
+                <li role="presentation"><a href="#/profile_favorites/{{selectedUserId}}">Favorites</a></li>
             </ul>
 
             <!-- Tab panes -->
@@ -30,5 +27,6 @@
             </div>
         </div>
     </div>
-
+</div>
+        </div>
 </div>
