--- a/public/partials/profile_favorites.html
+++ b/public/partials/profile_favorites.html
@@ -1,3 +1,5 @@
+<div class="row">
+    <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 col-sm-12 col-xs-12">
 <h1>Favorites</h1>
 
 <!-- PROFILE INFORMATION -->
@@ -6,14 +8,9 @@
         <div role="tabpanel">
             <!-- Nav tabs -->
             <ul class="nav nav-tabs" role="tablist">
-                <li role="presentation"><a href="#/profile/{{selectedUserId}}" aria-controls="home"
-                                           role="tab" data-toggle="tab">Profile</a></li>
-                <li role="presentation"><a ng-href="#/profile_comments/{{selectedUserId}}"
-                                                          aria-controls="messages" role="tab"
-                                                          data-toggle="tab">Comments</a>
-                </li>
-                <li role="presentation" class="active"><a ng-href="#/profile_favorites/{{selectedUserId}}" aria-controls="settings"
-                                           role="tab" data-toggle="tab">Favorites</a></li>
+                <li role="presentation"><a href="#/profile/{{selectedUserId}}">Profile</a></li>
+                <li role="presentation"><a href="#/profile_comments/{{selectedUserId}}">Comments</a></li>
+                <li role="presentation" class="active"><a href="#/profile_favorites/{{selectedUserId}}">Favorites</a></li>
             </ul>
 
             <!-- Tab panes -->
@@ -23,8 +20,8 @@
                         <div class="thumbnail">
                             <a href="#/show/{{show._id}}"><img ng-src="./data/images/{{show.img_filename}}"></a>
                             <div class="caption">
-                                <a href="#/show/{{show._id}}"><h3>{{show.name}}</h3></a>
-                                <button class="btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
+                                <a class="episode-list-item" href="#/show/{{show._id}}"><h3>{{show.name}}</h3></a>
+                                <button ng-if="isMyProfile" ng-click="removeFromFavorites(show._id)" class="episode-list-item pull-right btn btn-danger btn-sm"><span class="glyphicon glyphicon-trash"></span></button>
                             </div>
                         </div>
                     </div>
@@ -32,5 +29,6 @@
             </div>
         </div>
     </div>
-
+</div>
+        </div>
 </div>
